Rewrote the apps upstart process
Rewrote the apps upstart process, now using A class called ActivationService instead of App.xaml.cs

Also changed the startup page to a page called HomePage instead of MainPage
Also created a get method in IPersistency which returns a Inumerable list of Vinduer, (same as the method that returns Faldstammer)

--- a/UWP-App/UWP-App/View/LejlighedPage.xaml
+++ b/UWP-App/UWP-App/View/LejlighedPage.xaml
@@ -112,7 +112,7 @@
 
                     <StackPanel Grid.Row="0" Margin="20,0,20,10">
                         <TextBlock Text="Status rapporter der venter på godkendelse:" FontSize="24"/>
-                        <GridView ItemsSource="{Binding IkkeGodkendteStatusRapporter}" SelectedIndex="{Binding SelectedIndex, Mode=TwoWay}"
+                        <GridView ItemsSource="{Binding IkkeGodkendteStatusRapporter}" SelectedIndex="{Binding IkkeGodkendtSelectedIndex, Mode=TwoWay}"
                                   SelectionMode="Single" Margin="0,10,0,0">
                             <GridView.ItemTemplate>
                                 <DataTemplate>
@@ -136,7 +136,7 @@
 
                     <StackPanel Grid.Row="1" Margin="20,10,20,0">
                         <TextBlock Text="Godkente status rapporter:" FontSize="24"/>
-                        <GridView ItemsSource="{Binding GodkendteStatusRapporter}" 
+                        <GridView ItemsSource="{Binding GodkendteStatusRapporter}" SelectedIndex="{Binding GodkendtSelectedIndex}" 
                                   SelectionMode="Single" Margin="0,10,0,0">
                             <GridView.ItemTemplate>
                                 <DataTemplate>
