--- a/UWP-App/UWP-App/View/HomePage.xaml
+++ b/UWP-App/UWP-App/View/HomePage.xaml
@@ -1,13 +1,12 @@
 ﻿<Page
-    x:Class="UWP_App.MainPage"
+    x:Class="UWP_App.View.HomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:UWP_App"
+    xmlns:local="using:UWP_App.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    RequestedTheme="Light">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
         <TextBlock Text="I was here" FontSize="64" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Aqua"/>
