--- a/UWP-App/UWP-App/View/HomePage.xaml
+++ b/UWP-App/UWP-App/View/HomePage.xaml
@@ -9,6 +9,6 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-        <TextBlock Text="I was here" FontSize="64" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Aqua"/>
+        <TextBlock Text="Velkommen til BAS" FontSize="64" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Aqua"/>
     </Grid>
 </Page>
